Primer commit borrador

--- a/Version_Preliminar.ipynb
+++ b/Version_Preliminar.ipynb
@@ -2811,15 +2811,16 @@
   },
   {
    "cell_type": "code",
-   "source": "",
    "metadata": {
     "cell_id": "41254d7f25314d5985c63c1e86638325",
     "tags": [],
     "owner_user_id": "aa4619a7-8de0-414c-988e-4c7e1b19893b",
-    "deepnote_cell_type": "code"
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 66
    },
-   "outputs": [],
-   "execution_count": null
+   "source": "",
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
